--- a/OrderService/docker-compose.yml
+++ b/OrderService/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   postgres-db:
     image: postgres:latest
-    container_name: order_postgres
+    container_name: postgres
     environment:
       POSTGRES_DB: ordersdb
       POSTGRES_USER: admin
